# tableau-cloud-mcp-server

./: .env.example  .gitignore  CLAUDE_SETUP.md  COMPREHENSIVE_API_REFERENCE.md  HEROKU_DEPLOYMENT.md  LANGCHAIN_INTEGRATION.md  LICENSE  PHASE_2_IMPLEMENTATION_COMPLETE.md  PHASE_2_WORKFLOW_AUTOMATION.md  PHASE_3_INTELLIGENT_INSIGHTS.md  Procfile  README.md  VIZQL_DATA_SERVICE.md  app.json  claude_desktop_config.example.json  claude_desktop_config_heroku.example.json  claude_desktop_config_heroku.json  claude_desktop_config_heroku_fixed.json  claude_desktop_config_local.json  claude_desktop_config_proxy.json  langchain_enhancement_example.py  mcp_proxy_client.py  pyproject.toml  requirements.txt  test_comprehensive_api.py  test_enhanced_server.py  test_intelligent_analytics.py  test_langchain_integration.py  test_natural_language_simple.py  test_server.py  test_vizql_data_service.py  test_workflow_orchestration.py
tableau_mcp_server/: __init__.py  autonomous_optimizer.py  extended_tableau_client.py  http_server.py  intelligence_engine.py  langchain_integration.py  server.py  simple_server.py  tableau_client.py  vizql_data_service.py  workflow_orchestrator.py
